# ecs-practice

./: README.md  buildspec_nginx.yml
auth/docker/: docker-compose.yml
auth/docker/app/: Dockerfile
auth/docker/nginx/: Dockerfile  default.conf
auth/docker/php-fpm/: Dockerfile
auth/src/html/: Auth.php  Response.php  login.php  me.php  version.php
items/: .gitignore  Cargo.toml
items/docker/: .env  createRustImage.sh  docker-compose.yml  runRustContainer.sh
items/docker/app/: Dockerfile
items/docker/rust/: Dockerfile
items/src/: main.rs
nginx/: Dockerfile  index.html
shop/: package-lock.json  package.json
shop/docker/: docker-compose.yml
shop/docker/node/: Dockerfile
shop/src/: index.js
test/: index.html
