[package]
name = "items"
version = "0.1.0"
authors = ["Taichi <taichi@asaichi.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
